bring API implementation up  to spect
